--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,14 +1,17 @@
-  <h1 class="text-center">Registration</h1>
+<h1 class="text-center">Registration</h1>
+<div class="container col-lg-6">
   <form #data="ngForm" (ngSubmit)="persistUser(data.value)">
-
-  Email : <input ngModel class="form-control"  name="email" />
-  Name : <input ngModel class="form-control"  name="name" />
-  LastName : <input ngModel class="form-control"  name="lastName" />
-  Password : <input ngModel class="form-control"   name="password" />
-  <button
-    type="submit"
-    class="btn btn-primary"
-    value="Register"
-    style="margin-top: 5px"
-  ><i class="fa fa-registered" aria-hidden="true"></i> Register</button>
+    Email : <input ngModel class="form-control" name="email" /> Name :
+    <input ngModel class="form-control" name="name" /> LastName :
+    <input ngModel class="form-control" name="lastName" /> Password :
+    <input ngModel class="form-control" name="password" />
+    <button
+      type="submit"
+      class="btn btn-primary"
+      value="Register"
+      style="margin-top: 5px"
+    >
+      <i class="fa fa-registered" aria-hidden="true"></i> Register
+    </button>
   </form>
+</div>
